--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang="Default">
+<html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="Panthère est une agence web à paris spécialisée dans la stratégie web, le web design, l'illustrations.">
+    <meta name="description" content="Panthère est une agence web à Lyon spécialisée dans la stratégie web, le web design, l'illustrations.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
@@ -18,7 +18,7 @@
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js"></script>
 
-    <title>.</title>
+    <title>Panthère, agence web basé à Lyon</title>
 
     
 <!-- Analytics -->
