--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="description" content="Panthère est une agence web à Lyon spécialisée dans la stratégie web, le web design, l'illustrations.">
+	<meta name="description" content="La Panthère est une agence web à Lyon spécialisée dans la stratégie web, le web design, l'illustrations.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
@@ -19,7 +19,7 @@
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js"></script>
 
-	<title>Panthère, agence web basé à Lyon</title>
+	<title>La Panthère, agence web basé à Lyon - Accueil</title>
 
 
 	<!-- Analytics -->
@@ -42,8 +42,9 @@
 							<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie
 								web, web design, illustrations, design de site web, site web, web, internet, site
 								internet, site</div>
-							<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg"
-									alt="paris web design logo agence web meilleure agence" height="40" /></a>
+							<a class="navbar-brand" href="index.html">
+								<img src="img/agence-la-panthere-monochrome.svg" alt="paris web design logo agence web meilleure agence" height="40" />
+							</a>
 							<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie
 								web, web design, illustrations, design de site web, site web, web, internet, site
 								internet, site</div>
@@ -264,29 +265,29 @@
 							<div class="row row-no-gutters social">
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html">
-											<span class="fa fa-twitter icon-md" alt="Twitter"></span>
+										<a class="social" href="index.html" title="Twitter">
+											<span class="fa fa-twitter icon-md"></span>
 										</a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html">
-											<span class="fa fa-facebook icon-md" alt="Facebook"></span>
+										<a class="social" href="index.html" title="Facebook">
+											<span class="fa fa-facebook icon-md"></span>
 										</a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html">
-											<span class="fa fa-dribbble icon-md" alt="Dribbble"></span>
+										<a class="social" href="index.html" title="Dribbble">
+											<span class="fa fa-dribbble icon-md"></span>
 											</a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html">
-											<span class="fa fa-instagram icon-md" alt="Instagram"></span>
+										<a class="social" href="index.html" title="Instagram">
+											<span class="fa fa-instagram icon-md"></span>
 										</a>
 									</div>
 								</div>
