--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 								<li>
 								</li>
 								<li>
-									<a href="page2.html">page2 &gt;</a>
+									<a href="contact.html">Contact</a>
 								</li>
 							</ul>
 						</div>
@@ -79,14 +79,10 @@
 				<div class="container bloc-lg">
 					<div class="row tight-width-whitespace">
 						<div class="col-sm-12">
-							<img src="img/logo.png" class="center-block image-resize-mode" width="100"
-								alt="Agence La Panthère, agence web paris, création logo paris" />
-							<h1 class="text-center hero-bloc-text tc-white ">
-								Agence La Panthère
-							</h1>
+							<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Agence La Panthère, agence web paris, création logo paris" />
+							<h1 class="text-center hero-bloc-text tc-white ">Agence La Panthère</h1>
 							<div class="text-center">
-								<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
-									id="cta-hero">Contact</a>
+								<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 							</div>
 						</div>
 					</div>
@@ -99,8 +95,7 @@
 				<div class="container bloc-md">
 					<div class="row">
 						<div class="col-sm-12 text-center">
-							<img alt="agence web, agence web paris, web design paris, stratégie web"
-								src="img/title.png" />
+							<p class="bloc-md">L'agence La Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.</p><img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" />
 						</div>
 					</div>
 					<div class="row voffset-lg med-width-whitespace">
@@ -108,11 +103,11 @@
 							<div class="text-center">
 								<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 							</div>
-							<h3 class="mg-md text-center">
+							<h2 class="mg-md text-center">
 								Web design
-							</h3>
+							</h2>
 							<p class="text-center ">
-								Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez
+								Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez
 								de zéro, laissez-nous vous réaliser un design dont vous serez fier.
 							</p>
 						</div>
@@ -120,9 +115,9 @@
 							<div class="text-center">
 								<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 							</div>
-							<h3 class="mg-md text-center">
-								&nbsp;Stratégie
-							</h3>
+							<h2 class="mg-md text-center">
+								Stratégie
+							</h2>
 							<p class="text-center ">
 								Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour
 								comprendre vos objectifs commerciaux afin de vous proposer le meilleur design
@@ -133,9 +128,9 @@
 							<div class="text-center">
 								<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 							</div>
-							<h3 class="mg-md text-center">
+							<h2 class="mg-md text-center">
 								Illustrations
-							</h3>
+							</h2>
 							<p class="text-center ">
 								Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de
 								graphistes talentueux pour donner à vos pages une touche finale d'élégance.
@@ -144,7 +139,9 @@
 					</div>
 					<div class="row voffset-lg voffset">
 						<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-							<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/citation.png" />
+							<!-- A CHECK -->
+							<q class="bloc-md">"L'agence La Panthère est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon."</q>
+							<p>Maxime Guibard, PDG de À vos fourchettes</p>
 						</div>
 					</div>
 				</div>
@@ -167,7 +164,7 @@
 								site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre
 								site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites
 								beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche.
-								<br><br><a class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a><br>
+								<br><br><a class="ltc-white bold-link" href="contact.html">Contactez notre équipe</a><br>
 							</p>
 						</div>
 					</div>
@@ -245,7 +242,7 @@
 							Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 						</h2>
 						<div class="col-sm-12 text-center">
-							<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+							<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 						</div>
 					</div>
 				</div>
