--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 					<div class="row voffset-lg voffset">
 						<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
 							<!-- A CHECK -->
-							<q class="bloc-md">L'agence La Panthère est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon.</q>
+							<q>L'agence La Panthère est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon.</q>
 							<p>Maxime Guibard, PDG de À vos fourchettes</p>
 						</div>
 					</div>
