--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 				<div class="container bloc-md">
 					<div class="row">
 						<div class="col-sm-12 text-center">
-							<p class="bloc-md">L'agence La Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.</p><img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" />
+							<p class="bloc-md">L'agence La Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.</p>
 						</div>
 					</div>
 					<div class="row voffset-lg med-width-whitespace">
