--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 						<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
 							<!-- A CHECK -->
 							<q>L'agence La Panthère est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon.</q>
-							<p>Maxime Guibard, PDG de À vos fourchettes</p>
+							<cite>Maxime Guibard, PDG de À vos fourchettes</cite>
 						</div>
 					</div>
 				</div>
@@ -262,28 +262,28 @@
 							<div class="row row-no-gutters social">
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html" title="Twitter">
+										<a class="social" href="https://twitter.com/home" title="Twitter">
 											<span class="fa fa-twitter icon-md"></span>
 										</a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html" title="Facebook">
+										<a class="social" href="https://fr-fr.facebook.com" title="Facebook">
 											<span class="fa fa-facebook icon-md"></span>
 										</a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html" title="Dribbble">
+										<a class="social" href="https://dribbble.com" title="Dribbble">
 											<span class="fa fa-dribbble icon-md"></span>
 											</a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="index.html" title="Instagram">
+										<a class="social" href="https://www.instagram.com" title="Instagram">
 											<span class="fa fa-instagram icon-md"></span>
 										</a>
 									</div>
