--- a/index.html
+++ b/index.html
@@ -3,23 +3,18 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="description" content="La Panthère est une agence web à Lyon spécialisée dans la stratégie web, le web design, l'illustrations.">
+	<meta name="description" content="La Panthère est une entreprise de webdesign basée à Lyon spécialisée dans la stratégie web, le web design, l'illustrations.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
+	<!--<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">-->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
+	<!--<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">-->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 
-
-	<script src="./js/jquery-2.1.0.js"></script>
-	<script src="./js/bootstrap.js"></script>
-	<script src="./js/blocs.js"></script>
-	<script src="./js/jquery.touchSwipe.js" defer></script>
-	<script src="./js/gmaps.js"></script>
-
-	<title>La Panthère, agence web basé à Lyon - Accueil</title>
+	<title>La Panthère - Entreprise webdesign à Lyon</title>
 
 
 	<!-- Analytics -->
@@ -288,9 +283,6 @@
 										</a>
 									</div>
 								</div>
-								<div class="keywords" style="color:#F3976C;">Agence web à paris, stratégie web, web
-									design, illustrations, design de site web, site web, web, internet, site internet,
-									site</div>
 							</div>
 						</div>
 					</div>
@@ -302,6 +294,11 @@
 	</div>
 	<!-- Principal conteneur END -->
 
+	<script src="./js/jquery-2.1.0.js"></script>
+	<script src="./js/bootstrap.js"></script>
+	<script src="./js/blocs.js"></script>
+	<script src="./js/jquery.touchSwipe.js" defer></script>
+	<!--<script src="./js/gmaps.js"></script>-->
 
 </body>
 
