--- a/index.html
+++ b/index.html
@@ -34,15 +34,9 @@
 
 					<nav class="navbar row">
 						<div class="navbar-header">
-							<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie
-								web, web design, illustrations, design de site web, site web, web, internet, site
-								internet, site</div>
 							<a class="navbar-brand" href="index.html">
 								<img src="img/agence-la-panthere-monochrome.svg" alt="paris web design logo agence web meilleure agence" height="40" />
 							</a>
-							<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie
-								web, web design, illustrations, design de site web, site web, web, internet, site
-								internet, site</div>
 							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
 								data-toggle="collapse" data-target=".navbar-1">
 								<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
@@ -90,7 +84,7 @@
 				<div class="container bloc-md">
 					<div class="row">
 						<div class="col-sm-12 text-center">
-							<p class="bloc-md">L'agence La Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.</p>
+							<p class="bloc-md baseline">L'agence La Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.</p>
 						</div>
 					</div>
 					<div class="row voffset-lg med-width-whitespace">
@@ -135,8 +129,8 @@
 					<div class="row voffset-lg voffset">
 						<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
 							<!-- A CHECK -->
-							<q>L'agence La Panthère est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon.</q>
-							<cite>Maxime Guibard, PDG de À vos fourchettes</cite>
+							<q class="baseline"> L'agence La Panthère est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon. </q></br>
+							<cite class="baseline">Maxime Guibard, PDG de À vos fourchettes</cite>
 						</div>
 					</div>
 				</div>
@@ -148,7 +142,7 @@
 				<div class="container bloc-lg">
 					<div class="row tight-width-whitespace black-background">
 						<div class="col-sm-12">
-							<h2 class="mg-md text-center tc-white">
+							<h2 class="mg-md text-center white">
 								Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à
 								connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de
 								nouveaux clients .<br>
@@ -172,7 +166,7 @@
 				<div class="container bloc-lg">
 					<div class="row">
 						<div class="col-sm-12 text-center">
-							<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />
+							<p class="bloc-md baseline">Nous travaillons avec beaucoup de clients, voici nos réalisations.</p>
 						</div>
 					</div>
 					<div class="row tight-width-whitespace portfolio-row">
@@ -230,10 +224,10 @@
 			<!-- bloc-4-portfolio END -->
 
 			<!-- bloc-5-cta -->
-			<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
+			<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture" id="bloc-5-cta">
 				<div class="container bloc-lg">
 					<div class="row">
-						<h2 class="mg-md text-center tc-white">
+						<h2 class="mg-md text-center white">
 							Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 						</h2>
 						<div class="col-sm-12 text-center">
