--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<nav class="navbar row">
 						<div class="navbar-header">
 							<a class="navbar-brand" href="index.html">
-								<img src="img/agence-la-panthere-monochrome.svg" alt="paris web design logo agence web meilleure agence" height="40" />
+								<img src="img/agence-la-panthere-monochrome.webp" alt="paris web design logo agence web meilleure agence" height="40" />
 							</a>
 							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
 								data-toggle="collapse" data-target=".navbar-1">
@@ -68,7 +68,7 @@
 				<div class="container bloc-lg">
 					<div class="row tight-width-whitespace">
 						<div class="col-sm-12">
-							<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Agence La Panthère, agence web paris, création logo paris" />
+							<img src="img/logo.webp" class="center-block image-resize-mode" width="100" alt="Agence La Panthère, agence web paris, création logo paris" />
 							<h1 class="text-center hero-bloc-text tc-white ">Agence La Panthère</h1>
 							<div class="text-center">
 								<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
@@ -171,8 +171,8 @@
 					</div>
 					<div class="row tight-width-whitespace portfolio-row">
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
-								<img src="img/1.jpg" alt="Image pour la refonte d'un site web pour un journal local" class="img-responsive portfolio-thumb" />
+							<a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
+								<img src="img/1.webp" alt="Image pour la refonte d'un site web pour un journal local" class="img-responsive portfolio-thumb" />
 							</a>
 							<h3 class="mg-md text-center">
 								Refonte d'un site web pour un journal local
@@ -182,8 +182,8 @@
 							</p>
 						</div>
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
-								<img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="Image pour la création d'un site web pour photographes" />
+							<a href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
+								<img src="img/2.webp" class="img-responsive portfolio-thumb" alt="Image pour la création d'un site web pour photographes" />
 							</a>
 							<h3 class="mg-md text-center">
 								Création d'un site web pour photographes
@@ -195,8 +195,8 @@
 					</div>
 					<div class="row tight-width-whitespace portfolio-row">
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
-								<img src="img/3.bmp" class="img-responsive portfolio-thumb" alt="Image pour la création d'un site internet pour un voyageur" />
+							<a href="#" data-lightbox="img/3.webp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
+								<img src="img/3.webp" class="img-responsive portfolio-thumb" alt="Image pour la création d'un site internet pour un voyageur" />
 							</a>
 							<h3 class="mg-md text-center">
 								Création d'un site internet pour un voyageur
@@ -207,8 +207,8 @@
 							</p>
 						</div>
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
-								<img src="img/4.bmp" class="img-responsive portfolio-thumb" alt="Image pour la création d'un site web pour agence de mariage" />
+							<a href="#" data-lightbox="img/4.webp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
+								<img src="img/4.webp" class="img-responsive portfolio-thumb" alt="Image pour la création d'un site web pour agence de mariage" />
 							</a>
 							<h3 class="mg-md text-center">
 								Conception d'un site pour une agence de mariage
