--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<nav class="navbar row">
 						<div class="navbar-header">
 							<a class="navbar-brand" href="index.html">
-								<img src="img/agence-la-panthere-monochrome.webp" alt="paris web design logo agence web meilleure agence" height="40" />
+								<img src="img/agence-la-panthere-monochrome.webp" alt="Logo La Panthère - Agence Web" height="40" />
 							</a>
 							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
 								data-toggle="collapse" data-target=".navbar-1">
@@ -47,8 +47,6 @@
 							<ul class="site-navigation nav navbar-nav">
 								<li>
 									<a href="index.html">Accueil</a>
-								</li>
-								<li>
 								</li>
 								<li>
 									<a href="contact.html">Contact</a>
