--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">-->
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
-	<!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />-->
+	<!--<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">-->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 
 	<title>La Panthère - Entreprise webdesign à Lyon</title>
@@ -169,7 +169,7 @@
 					<div class="row tight-width-whitespace portfolio-row">
 						<div class="col-sm-6">
 							<a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
-								<img src="img/1.webp" alt="Image pour la refonte d'un site web pour un journal local" class="img-responsive portfolio-thumb" />
+								<img src="img/1.webp" alt="Image pour la refonte d'un site web pour un journal local" class="img-responsive portfolio-thumb" loading="lazy" />
 							</a>
 							<h3 class="mg-md text-center">
 								Refonte d'un site web pour un journal local
@@ -180,7 +180,7 @@
 						</div>
 						<div class="col-sm-6">
 							<a href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
-								<img src="img/2.webp" class="img-responsive portfolio-thumb" alt="Image pour la création d'un site web pour photographes" />
+								<img src="img/2.webp" class="img-responsive portfolio-thumb" alt="Image pour la création d'un site web pour photographes" loading="lazy" />
 							</a>
 							<h3 class="mg-md text-center">
 								Création d'un site web pour photographes
@@ -193,7 +193,7 @@
 					<div class="row tight-width-whitespace portfolio-row">
 						<div class="col-sm-6">
 							<a href="#" data-lightbox="img/3.webp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
-								<img src="img/3.webp" class="img-responsive portfolio-thumb" alt="Image pour la création d'un site internet pour un voyageur" />
+								<img src="img/3.webp" class="img-responsive portfolio-thumb" alt="Image pour la création d'un site internet pour un voyageur" loading="lazy" />
 							</a>
 							<h3 class="mg-md text-center">
 								Création d'un site internet pour un voyageur
@@ -205,7 +205,7 @@
 						</div>
 						<div class="col-sm-6">
 							<a href="#" data-lightbox="img/4.webp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
-								<img src="img/4.webp" class="img-responsive portfolio-thumb" alt="Image pour la création d'un site web pour agence de mariage" />
+								<img src="img/4.webp" class="img-responsive portfolio-thumb" alt="Image pour la création d'un site web pour agence de mariage" loading="lazy" />
 							</a>
 							<h3 class="mg-md text-center">
 								Conception d'un site pour une agence de mariage
