--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 	<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">-->
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<!--<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">-->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
     <title>La Panthère - Contact</title>
@@ -29,7 +29,7 @@
 			<nav class="navbar row">
 				<div class="navbar-header">
 					<a class="navbar-brand" href="index.html">
-						<img src="img/agence-la-panthere-monochrome.webp" alt="Logo La Panthère - Agence Web" height="40" />
+						<img src="img/agence-la-panthere-monochrome.webp" alt="Logo La Panthère - Agence Web" height="40">
 					</a>
 					<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
 						data-toggle="collapse" data-target=".navbar-1">
@@ -81,19 +81,19 @@
 						<label>
 							Nom
 						</label>
-						<input id="name" class="form-control" required />
+						<input id="name" class="form-control" required>
 					</div>
 					<div class="form-group">
 						<label>
 							Adresse email
 						</label>
-						<input id="email" class="form-control" type="email" required />
+						<input id="email" class="form-control" type="email" required>
 					</div>
 					<div class="form-group">
 						<label>
 							Comment nous avez-vous connu ?
 						</label>
-						<input class="form-control" type="email" required id="input_504" />
+						<input class="form-control" type="email" required id="input_504">
 					</div>
 					<div class="form-group">
 						<label>
